...
            android:drawableStart="@drawable/search"
            android:drawablePadding="8dp"
            android:imeOptions="actionSearch"
            android:inputType="text" />

        <ImageButton
            android:id="@+id/filterIcon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:src="@drawable/filter"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="Filter"
...
                    android:textSize="14sp"
                    android:textStyle="bold"
                    android:layout_gravity="center_horizontal"
                    android:paddingBottom="8dp"/>

                <Spinner
                    android:id="@+id/colourFilterSpinner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:prompt="@string/select_color"
                    android:spinnerMode="dropdown"/>
            </LinearLayout>
        </androidx.cardview.widget.CardView>
...
                    android:textSize="14sp"
                    android:textStyle="bold"
                    android:layout_gravity="center_horizontal"
                    android:paddingBottom="8dp"/>

                <Spinner
                    android:id="@+id/typeFilterSpinner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:prompt="@string/select_type"
                    android:spinnerMode="dropdown"/>
            </LinearLayout>
        </androidx.cardview.widget.CardView>
...
                    android:textSize="14sp"
                    android:textStyle="bold"
                    android:layout_gravity="center_horizontal"
                    android:paddingBottom="8dp"/>

                <EditText
                    android:id="@+id/priceFilterEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Enter max price"/>
            </LinearLayout>
        </androidx.cardview.widget.CardView>

...
                    android:prompt="@string/sort_by_price"
                    android:spinnerMode="dropdown"/>
            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </com.google.android.flexbox.FlexboxLayout>
            <Button
                android:id="@+id/applyFilterButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Apply Filter"
                android:layout_gravity="center"
                android:layout_marginBottom="16dp"
                android:visibility="gone"/>
...
android:layout_width="wrap_content"
android:layout_height="wrap_content"
android:layout_gravity="center"
android:visibility="gone" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:scrollbars="vertical"
        android:layout_marginBottom="40dp"/>
    </LinearLayout>
