...
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/transparent" />


    <TextView
        android:id="@+id/model_counter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
...
        android:layout_width="300dp"
        android:layout_height="match_parent"
        android:layout_gravity="end"
        android:visibility="gone"/>

    <ImageButton
        android:id="@+id/save_button"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
...
        android:contentDescription="Clear all models"
        android:visibility="gone"
        android:elevation="8dp"/>


    <Button
        android:id="@+id/clear_button"
        style="@style/RedoButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/bottom_nav_bar"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="80dp"
...
